Add picture changes when hover to projects in main page

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -240,32 +240,75 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
                         margin: 0 -14px;                        
                         
                         .project__content{
-                            display: flex;
-                            flex-direction: column;
+                            // display: flex;
+                            // flex-direction: column;
                             position: relative;
                             min-width: 248px;
                             flex-grow: 1;
                             width: calc((100% - 56px) / 3);
-                            // width: fit-content;
-                            padding: 0 14px 28px 14px;                                                       
-                            .project__photo{
-                                // padding: 0 0 prc(352, 528) 0;
-                                // width: 528px;
-                                max-width: 100%;
-                                cursor: pointer;
-                                    
-                            }                                
-                            
-                            .project__text{
-                                font-size: $fz12;
-                                font-weight: 300;
-                                width: fit-content;
-                                text-transform: uppercase;
-                                margin-block-start: 0;
-                                margin: 8px 0 0 0;
-                                cursor: pointer;
-                                @include text_hover;                                
+                            padding: 0 14px rem(28) 14px;  
+                            .project__img{
+                                position: relative;
+                                max-width: 528px;
+                                // min-height: 145px;
+                                // max-height: 352px;
+
+                                img{
+                                    position: absolute;
+                                    left: 0;
+                                    top: 0;
+                                }
+
+                                .project__photo{
+                                    // padding: 0 0 prc(352, 528) 0;
+                                    // width: 528px;
+                                    max-width: 100%;
+                                    cursor: pointer;
+
+                                    opacity:1;
+                                        
+                                }  
+    
+                                .project__photo-hover{
+                                    max-width: 100%;
+                                    cursor: pointer;
+
+                                    opacity:0;
+    
+                                }                              
                             }
+
+                            .project__img:hover .project__photo { 
+
+                                opacity:0;                              
+                              
+                            }
+                            
+                            .project__img:hover .project__photo-hover, .project__img .project__photo-hover:hover {
+
+                                opacity:1;
+                            }
+
+                            .project__content-wrapper{
+                                display: flex;
+                                flex-direction: column;
+                                
+                                .project__photo-hiden{
+                                    max-width: 100%;
+                                    visibility: hidden;
+                                }
+    
+                                .project__text{
+                                    font-size: $fz12;
+                                    font-weight: 300;
+                                    width: fit-content;
+                                    text-transform: uppercase;
+                                    cursor: pointer;
+                                    margin-top: rem(14);
+                                    @include text_hover;                                
+                                }
+                            }
+
                         }
                         
                     }
