--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -134,6 +134,40 @@ html::selection, body::selection, div::selection, span::selection, object::selec
   margin: 0 -14px;
 }
 .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content {
+  position: relative;
+  min-width: 248px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  width: calc((100% - 56px) / 3);
+  padding: 0 14px 1.75rem 14px;
+}
+.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__img {
+  position: relative;
+  max-width: 528px;
+}
+.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__img img {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__img .project__photo {
+  max-width: 100%;
+  cursor: pointer;
+  opacity: 1;
+}
+.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__img .project__photo-hover {
+  max-width: 100%;
+  cursor: pointer;
+  opacity: 0;
+}
+.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__img:hover .project__photo {
+  opacity: 0;
+}
+.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__img:hover .project__photo-hover, .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__img .project__photo-hover:hover {
+  opacity: 1;
+}
+.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__content-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -141,41 +175,32 @@ html::selection, body::selection, div::selection, span::selection, object::selec
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  position: relative;
-  min-width: 248px;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  width: calc((100% - 56px) / 3);
-  padding: 0 14px 28px 14px;
 }
-.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__photo {
+.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__content-wrapper .project__photo-hiden {
   max-width: 100%;
-  cursor: pointer;
+  visibility: hidden;
 }
-.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__text {
+.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__content-wrapper .project__text {
   font-size: 0.75rem;
   font-weight: 300;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   text-transform: uppercase;
-  -webkit-margin-before: 0;
-          margin-block-start: 0;
-  margin: 8px 0 0 0;
   cursor: pointer;
+  margin-top: 0.875rem;
   border-bottom: transparent solid 1px;
 }
-.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__text:visited {
+.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__content-wrapper .project__text:visited {
   background-color: transparent;
   border-bottom: #727272 solid 1px;
 }
-.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__text:hover {
+.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__content-wrapper .project__text:hover {
   border-bottom: #727272 solid 1px;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
-.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__text:active {
+.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__content-wrapper .project__text:active {
   background-color: transparent;
   border-bottom: #727272 solid 1px;
 }
