--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -111,7 +111,7 @@ html::selection, body::selection, div::selection, span::selection, object::selec
   background-color: transparent;
   border-bottom: #727272 solid 1px;
 }
-.page__main .page__header .page__container .page__nav-bar .header__navigation li a img {
+.page__main .page__header .page__container .page__nav-bar .header__navigation li svg {
   height: 24px;
 }
 .page__main .page__content {
