--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -4,10 +4,6 @@
   font-weight: 400;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
 body {
   padding: 0;
   margin: 0;
@@ -436,7 +432,7 @@ body._lock {
 }
 
 .section-wrapper {
-  padding: 112px 0 0 0;
+  padding: 0 0 112px 0;
 }
 
 .more-btn {
